tests/valid_make_int/bug506_sub.m
%---------------------------------------------------------------------------%
% vim: ft=mercury ts=4 sw=4 et
%---------------------------------------------------------------------------%

:- module bug506_sub.
:- interface.

:- type (rule)
    --->    rule(int).
